--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 			
-			<img class="drift" src="F:\ZZZZ\video\drift.jpg" alt="Drift jx90 lexus">
+			<img class="drift" src="video\drift.mp4" alt="Drift jx90 lexus">
 			
 			
 			
