--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</html>
 	<section class="showcase">
 			<div class="video-container">
-				<video src= "video\drift.mp4" autoplay muted loop></video>
+				<video src= "video\video.mp4" autoplay muted loop></video>
 			</div>
 			<div class="content">
 				<h1 align="center">David you a bum</h1>
