--- a/index.html
+++ b/index.html
@@ -41,15 +41,44 @@
 
 
 			
-			<img class="drift" src="drift.jpg" alt="Drift jx90 lexus">
+			<iframe class="drift"width="560" height="315" src="https://www.youtube.com/embed/r5p-BSyVRNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
 			
 			
 			<h4><p>
-				Schau dir das an, wenn du das lernen willst fick dich.
+				Schau dir das an, wenn du es lernen willst(noob)
 				Meine drift moves kriegst du nicht hin nigga.
 			</p></h4>
 
+
+			<br>
+
+
+
+
+
+
+
+
+
+
+			<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+			<br>
+
+			<img src="drift.jpg" alt="Drift jx90 lexus">
 			
 
 			<div align="center" class="social">
