--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			
 			<h4><p>
 				Schau dir das an, wenn du es lernen willst(noob)
-				Meine drift moves kriegst du nicht hin nigga.
+				Meine drift moves kriegst du eh nicht hin nigga.
 			</p></h4>
 
 
