--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="wrapper">
 	<section class="showcase">
 			<div class="video-container">
-				<video src= "F:\ZZZZ\video\video.mp4" autoplay muted loop></video>
+				<video src= "video.mp4" autoplay muted loop></video>
 			</div>
 			<div class="content">
 				<h1 align="center">David you a bum</h1>
@@ -79,7 +79,7 @@
 
 			<br>
 			<section class="bild" >
-			<img src="F:\ZZZZ\video\drift.jpg" alt="Drift jx90 lexus">
+			<img src="drift.jpg" alt="Drift jx90 lexus">
 			
 
 			<div align="center" class="social">
